# Transcript_Intelligence

./: .env.example  .gitignore  Aegis_Transcript_Intelligence_Leadership_Deck.pptx  LLM_INSIGHTS_README.md  README.md  app.py  decisions.md  main.py  pyproject.toml  requirements.txt  test_text_optimization.py
assets/: style.css
config/: categories.yaml  llm copy.yaml  llm.yaml  organizations.yaml  sentiment_analysis.yaml
pages/: 0_🏠_Home.py  1_📊_Category.py  2_🏢_Organization.py  3_💭_Sentiment.py
services/: __init__.py  llm_insights_service.py  llm_utils.py
utils/: __init__.py  css_loader.py  data_loader.py  organization_analyzer.py  rule_based_categorizer.py  sentiment_analyzer.py
