[project]
name = "transcript-intelligence"
version = "0.1.0"
description = "Aegis Transcript Intelligence - AI-Powered Meeting Analysis & Business Intelligence Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "plotly>=5.19.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
